// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useServerPlugin > TRANSFORMS > ALREADY_DEFINED_DEFAULT_EXPORT_CODE > CLIENT 1`] = `
"import { createServerReference } from "rwsdk/client";


export default createServerReference("/test.tsx", "default");
"
`;

exports[`useServerPlugin > TRANSFORMS > ALREADY_DEFINED_DEFAULT_EXPORT_CODE > SSR 1`] = `
"import { createServerReference } from "rwsdk/__ssr";


export default createServerReference("/test.tsx", "default");
"
`;

exports[`useServerPlugin > TRANSFORMS > ALREADY_DEFINED_DEFAULT_EXPORT_CODE > WORKER 1`] = `
"import { registerServerReference } from "rwsdk/worker";

const sum = () => {
  return 1 + 1;
}

export default sum;
const __defaultServerFunction__ = sum;
registerServerReference(__defaultServerFunction__, "/test.tsx", "default")
"
`;

exports[`useServerPlugin > TRANSFORMS > ARROW_FUNCTION_EXPORT_CODE > CLIENT 1`] = `
"import { createServerReference } from "rwsdk/client";

export let sum = createServerReference("/test.tsx", "sum");
"
`;

exports[`useServerPlugin > TRANSFORMS > ARROW_FUNCTION_EXPORT_CODE > SSR 1`] = `
"import { createServerReference } from "rwsdk/__ssr";

export let sum = createServerReference("/test.tsx", "sum");
"
`;

exports[`useServerPlugin > TRANSFORMS > ARROW_FUNCTION_EXPORT_CODE > WORKER 1`] = `
"import { registerServerReference } from "rwsdk/worker";

export const sum = () => {
  return 1 + 1
}
registerServerReference(sum, "/test.tsx", "sum")
"
`;

exports[`useServerPlugin > TRANSFORMS > ASYNC_FUNCTION_EXPORT_CODE > CLIENT 1`] = `
"import { createServerReference } from "rwsdk/client";

export let sum = createServerReference("/test.tsx", "sum");
"
`;

exports[`useServerPlugin > TRANSFORMS > ASYNC_FUNCTION_EXPORT_CODE > SSR 1`] = `
"import { createServerReference } from "rwsdk/__ssr";

export let sum = createServerReference("/test.tsx", "sum");
"
`;

exports[`useServerPlugin > TRANSFORMS > ASYNC_FUNCTION_EXPORT_CODE > WORKER 1`] = `
"import { registerServerReference } from "rwsdk/worker";

export async function sum() {
  return 1 + 1
}
registerServerReference(sum, "/test.tsx", "sum")
"
`;

exports[`useServerPlugin > TRANSFORMS > COMMENT_BLOCK_CODE > CLIENT 1`] = `
"import { createServerReference } from "rwsdk/client";

export let sum = createServerReference("/test.tsx", "sum");
"
`;

exports[`useServerPlugin > TRANSFORMS > COMMENT_BLOCK_CODE > SSR 1`] = `
"import { createServerReference } from "rwsdk/__ssr";

export let sum = createServerReference("/test.tsx", "sum");
"
`;

exports[`useServerPlugin > TRANSFORMS > COMMENT_BLOCK_CODE > WORKER 1`] = `
"
/* Giant
 * Comment
 * Block
 */
import { registerServerReference } from "rwsdk/worker";

export function sum() {
  return 1 + 1
}
registerServerReference(sum, "/test.tsx", "sum")
"
`;

exports[`useServerPlugin > TRANSFORMS > COMMENT_CODE > CLIENT 1`] = `
"import { createServerReference } from "rwsdk/client";

export let sum = createServerReference("/test.tsx", "sum");
"
`;

exports[`useServerPlugin > TRANSFORMS > COMMENT_CODE > SSR 1`] = `
"import { createServerReference } from "rwsdk/__ssr";

export let sum = createServerReference("/test.tsx", "sum");
"
`;

exports[`useServerPlugin > TRANSFORMS > COMMENT_CODE > WORKER 1`] = `
"import { registerServerReference } from "rwsdk/worker";

// Comment

export function sum() {
  return 1 + 1;
}
registerServerReference(sum, "/test.tsx", "sum")
"
`;

exports[`useServerPlugin > TRANSFORMS > DEFAULT_AND_NAMED_EXPORTS_CODE > CLIENT 1`] = `
"import { createServerReference } from "rwsdk/client";

export let sum = createServerReference("/test.tsx", "sum");

export default createServerReference("/test.tsx", "default");
"
`;

exports[`useServerPlugin > TRANSFORMS > DEFAULT_AND_NAMED_EXPORTS_CODE > SSR 1`] = `
"import { createServerReference } from "rwsdk/__ssr";

export let sum = createServerReference("/test.tsx", "sum");

export default createServerReference("/test.tsx", "default");
"
`;

exports[`useServerPlugin > TRANSFORMS > DEFAULT_AND_NAMED_EXPORTS_CODE > WORKER 1`] = `
"import { registerServerReference } from "rwsdk/worker";

export function sum() {
  return 1 + 1;
}

function __defaultServerFunction__() {
  return 1 + 2;
}

export default __defaultServerFunction__;
registerServerReference(__defaultServerFunction__, "/test.tsx", "default")
registerServerReference(sum, "/test.tsx", "sum")
"
`;

exports[`useServerPlugin > TRANSFORMS > DEFAULT_EXPORT_CODE > CLIENT 1`] = `
"import { createServerReference } from "rwsdk/client";

export let sum = createServerReference("/test.tsx", "sum");

export default createServerReference("/test.tsx", "default");
"
`;

exports[`useServerPlugin > TRANSFORMS > DEFAULT_EXPORT_CODE > SSR 1`] = `
"import { createServerReference } from "rwsdk/__ssr";

export let sum = createServerReference("/test.tsx", "sum");

export default createServerReference("/test.tsx", "default");
"
`;

exports[`useServerPlugin > TRANSFORMS > DEFAULT_EXPORT_CODE > WORKER 1`] = `
"import { registerServerReference } from "rwsdk/worker";

function __defaultServerFunction__() {
  return 1 + 1;
}

export default __defaultServerFunction__;
registerServerReference(__defaultServerFunction__, "/test.tsx", "default")
registerServerReference(sum, "/test.tsx", "sum")
"
`;

exports[`useServerPlugin > TRANSFORMS > MULTI_LINE_COMMENT_CODE > CLIENT 1`] = `
"import { createServerReference } from "rwsdk/client";

export let sum = createServerReference("/test.tsx", "sum");
"
`;

exports[`useServerPlugin > TRANSFORMS > MULTI_LINE_COMMENT_CODE > SSR 1`] = `
"import { createServerReference } from "rwsdk/__ssr";

export let sum = createServerReference("/test.tsx", "sum");
"
`;

exports[`useServerPlugin > TRANSFORMS > MULTI_LINE_COMMENT_CODE > WORKER 1`] = `
"import { registerServerReference } from "rwsdk/worker";

// Multi-line
// Comment

export function sum() {
  return 1 + 1
}
registerServerReference(sum, "/test.tsx", "sum")
"
`;

exports[`useServerPlugin > TRANSFORMS > NAMED_EXPORT_CODE > CLIENT 1`] = `
"import { createServerReference } from "rwsdk/client";

export let sum = createServerReference("/test.tsx", "sum");
"
`;

exports[`useServerPlugin > TRANSFORMS > NAMED_EXPORT_CODE > SSR 1`] = `
"import { createServerReference } from "rwsdk/__ssr";

export let sum = createServerReference("/test.tsx", "sum");
"
`;

exports[`useServerPlugin > TRANSFORMS > NAMED_EXPORT_CODE > WORKER 1`] = `
"import { registerServerReference } from "rwsdk/worker";

export function sum() {
  return 1 + 1
}
registerServerReference(sum, "/test.tsx", "sum")
"
`;

exports[`useServerPlugin > TRANSFORMS > RE_EXPORT_CODE > CLIENT 1`] = `
"import { createServerReference } from "rwsdk/client";

export let sum = createServerReference("/test.tsx", "sum");
export let multiply = createServerReference("/test.tsx", "multiply");
"
`;

exports[`useServerPlugin > TRANSFORMS > RE_EXPORT_CODE > SSR 1`] = `
"import { createServerReference } from "rwsdk/__ssr";

export let sum = createServerReference("/test.tsx", "sum");
export let multiply = createServerReference("/test.tsx", "multiply");
"
`;

exports[`useServerPlugin > TRANSFORMS > RE_EXPORT_CODE > WORKER 1`] = `
"import { sum } from "./math";
import { default as multiply } from "./multiply";
import { registerServerReference } from "rwsdk/worker";

export { sum } from './math';
export { default as multiply } from './multiply';
export * from './utils';
registerServerReference(sum, "/test.tsx", "sum")
registerServerReference(multiply, "/test.tsx", "multiply")
"
`;
